@@ -110,7 +110,7 @@ typedef libspectrum_error
 (*libspectrum_error_function_t)( libspectrum_error error,
 				 const char *format, va_list ap );
 
-extern libspectrum_error_function_t libspectrum_error_function;
+extern libspectrum_error_function_t WIN32_DLL libspectrum_error_function;
 
 libspectrum_error WIN32_DLL
 libspectrum_default_error_function( libspectrum_error error,
@@ -235,36 +235,40 @@ typedef enum libspectrum_machine {
 
 } libspectrum_machine;
 
-const char* libspectrum_machine_name( libspectrum_machine type );
+const char* WIN32_DLL libspectrum_machine_name( libspectrum_machine type );
 
 /* The various capabilities of the different machines */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_AY;		/* AY-3-8192 */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_128_MEMORY;
-                                                  /* 128-style memory paging */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_MEMORY;
-                                                   /* +3-style memory paging */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_DISK;
-                                                      /* +3-style disk drive */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_MEMORY;
-                                                /* Timex-style memory paging */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_VIDEO;
-                                                  /* Timex-style video modes */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_TRDOS_DISK;
-                                                   /* TRDOS-style disk drive */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_DOCK;
-                                           /* T[SC]2068-style cartridge port */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_SINCLAIR_JOYSTICK;
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_AY;                              /* AY-3-8192 */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_128_MEMORY;        /* 128-style memory paging */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_MEMORY;       /* +3-style memory paging */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_PLUS3_DISK;            /* +3-style disk drive */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_MEMORY;    /* Timex-style memory paging */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_VIDEO;       /* Timex-style video modes */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_TRDOS_DISK;         /* TRDOS-style disk drive */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_TIMEX_DOCK; /* T[SC]2068-style cartridge port */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_SINCLAIR_JOYSTICK;
                                             /* Sinclair-style joystick ports */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_KEMPSTON_JOYSTICK;
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_KEMPSTON_JOYSTICK;
                                             /* Kempston-style joystick ports */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_SCORP_MEMORY;
-                                             /* Scorpion-style memory paging */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_EVEN_M1;
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_SCORP_MEMORY; /* Scorpion-style memory paging */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_EVEN_M1;
                              /* M1 cycles always start on even tstate counts */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_SE_MEMORY;
-                                                   /* SE-style memory paging */
-extern const int LIBSPECTRUM_MACHINE_CAPABILITY_NTSC;
-                                                             /* NTSC display */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_SE_MEMORY;          /* SE-style memory paging */
+extern const int WIN32_DLL
+LIBSPECTRUM_MACHINE_CAPABILITY_NTSC;                         /* NTSC display */
 
 /* Get the capabilities of a machine */
 int WIN32_DLL libspectrum_machine_capabilities( libspectrum_machine type );
@@ -365,12 +369,12 @@ libspectrum_snap_write( libspectrum_byte **buffer, size_t *length,
 			int in_flags );
 
 /* The flags that can be given to libspectrum_snap_write() */
-extern const int LIBSPECTRUM_FLAG_SNAPSHOT_NO_COMPRESSION;
-extern const int LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS;
+extern const int WIN32_DLL LIBSPECTRUM_FLAG_SNAPSHOT_NO_COMPRESSION;
+extern const int WIN32_DLL LIBSPECTRUM_FLAG_SNAPSHOT_ALWAYS_COMPRESS;
 
 /* The flags that may be returned from libspectrum_snap_write() */
-extern const int LIBSPECTRUM_FLAG_SNAPSHOT_MINOR_INFO_LOSS;
-extern const int LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
+extern const int WIN32_DLL LIBSPECTRUM_FLAG_SNAPSHOT_MINOR_INFO_LOSS;
+extern const int WIN32_DLL LIBSPECTRUM_FLAG_SNAPSHOT_MAJOR_INFO_LOSS;
 
 /* The joystick types we can handle */
 typedef enum libspectrum_joystick {
@@ -387,12 +391,12 @@ typedef enum libspectrum_joystick {
 
 } libspectrum_joystick;
 
-const char* libspectrum_joystick_name( libspectrum_joystick type );
+const char* WIN32_DLL libspectrum_joystick_name( libspectrum_joystick type );
 
-extern const int LIBSPECTRUM_JOYSTICK_INPUT_NONE;
-extern const int LIBSPECTRUM_JOYSTICK_INPUT_KEYBOARD;
-extern const int LIBSPECTRUM_JOYSTICK_INPUT_JOYSTICK_1;
-extern const int LIBSPECTRUM_JOYSTICK_INPUT_JOYSTICK_2;
+extern const int WIN32_DLL LIBSPECTRUM_JOYSTICK_INPUT_NONE;
+extern const int WIN32_DLL LIBSPECTRUM_JOYSTICK_INPUT_KEYBOARD;
+extern const int WIN32_DLL LIBSPECTRUM_JOYSTICK_INPUT_JOYSTICK_1;
+extern const int WIN32_DLL LIBSPECTRUM_JOYSTICK_INPUT_JOYSTICK_2;
 
 /* Accessor functions */
 LIBSPECTRUM_SNAP_ACCESSORS
@@ -453,9 +457,9 @@ typedef enum libspectrum_tape_type {
 typedef struct libspectrum_tape_block libspectrum_tape_block;
 
 /* Some flags */
-extern const int LIBSPECTRUM_TAPE_FLAGS_BLOCK;	/* End of block */
-extern const int LIBSPECTRUM_TAPE_FLAGS_STOP;	/* Stop tape */
-extern const int LIBSPECTRUM_TAPE_FLAGS_STOP48;	/* Stop tape if in 48K mode */
+extern const int WIN32_DLL LIBSPECTRUM_TAPE_FLAGS_BLOCK;  /* End of block */
+extern const int WIN32_DLL LIBSPECTRUM_TAPE_FLAGS_STOP;	  /* Stop tape */
+extern const int WIN32_DLL LIBSPECTRUM_TAPE_FLAGS_STOP48; /* Stop tape if in 48K mode */
 
 /* The states which a block can be in */
 typedef enum libspectrum_tape_state_type {
@@ -475,7 +479,8 @@ typedef enum libspectrum_tape_state_type {
 libspectrum_error WIN32_DLL
 libspectrum_tape_block_alloc( libspectrum_tape_block **block,
 			      libspectrum_tape_type type );
-libspectrum_error libspectrum_tape_block_free( libspectrum_tape_block *block );
+libspectrum_error WIN32_DLL
+libspectrum_tape_block_free( libspectrum_tape_block *block );
 libspectrum_tape_type WIN32_DLL
 libspectrum_tape_block_type( libspectrum_tape_block *block );
 libspectrum_error WIN32_DLL
@@ -644,7 +649,7 @@ libspectrum_error WIN32_DLL
 libspectrum_rzx_read( libspectrum_rzx *rzx, const libspectrum_byte *buffer,
 		      size_t length );
 
-libspectrum_error
+libspectrum_error WIN32_DLL
 libspectrum_rzx_write( libspectrum_byte **buffer, size_t *length,
 		       libspectrum_rzx *rzx, libspectrum_id_t snap_format,
 		       libspectrum_creator *creator, int compress,
@@ -669,14 +674,14 @@ typedef enum libspectrum_rzx_block_id {
 
 } libspectrum_rzx_block_id;
 
-libspectrum_rzx_iterator
+libspectrum_rzx_iterator WIN32_DLL
 libspectrum_rzx_iterator_begin( libspectrum_rzx *rzx );
-libspectrum_rzx_iterator
+libspectrum_rzx_iterator WIN32_DLL
 libspectrum_rzx_iterator_next( libspectrum_rzx_iterator it );
 
-libspectrum_rzx_block_id
+libspectrum_rzx_block_id WIN32_DLL
 libspectrum_rzx_iterator_get_type( libspectrum_rzx_iterator it );
-size_t
+size_t WIN32_DLL
 libspectrum_rzx_iterator_get_frames( libspectrum_rzx_iterator it );
 
 /*
