@@ -301,3 +301,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20050125 libspectrum.h.in: Warn about use of deprecated interfaces with GCC
 	 (Fred).
 20050204 szx.c,rzx.c: More compilation fixes when zlib not present (Fred).
+20050204 libspectrum.h.in: More Win32 compilation fixes (Fred).
